[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dm-mcp-server"
version = "2.4"
description = "达梦数据库 Model Context Protocol (MCP) 服务器"
readme = "README.md"
license = "MIT"
authors = [
    {name = "wxt", email = "contact@example.com"}
]
maintainers = [
    {name = "wxt", email = "contact@example.com"}
]
keywords = ["dameng", "database", "mcp", "model-context-protocol", "dmPython"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "dmPython>=2.0.0",
    "setuptools-scm>=6.2",
]

[project.urls]
Homepage = "https://github.com/example-org/dm-mcp-server"
Documentation = "https://github.com/example-org/dm-mcp-server#readme"
Repository = "https://github.com/example-org/dm-mcp-server.git"
"Bug Tracker" = "https://github.com/example-org/dm-mcp-server/issues"

[project.scripts]
dm-mcp-server = "dm_mcp_server:main"

[tool.setuptools]
py-modules = ["dm_mcp_server"]

[tool.setuptools.package-data]
"*" = ["*.py", "*.md", "*.txt", "*.toml"]
